@@ -10,7 +10,7 @@ local params = {
 	map = "SB_Grassy",
 	theme = "Castle",
 	hog_x = 2112,
-	hog_y = 913,
+	hog_y = 935,
 	hogName = loc("Zook"),
 	hogHat = "war_americanww2helmet",
 	teamName = loc("Team Zook"),
