@@ -9,9 +9,10 @@ local params = {
 	map = "Trash",
 	theme = "Golf",
 	hog_x = 756,
-	hog_y = 370,
+	hog_y = 403,
 	hogName = loc("Private Nolak"),
 	hogHat = "war_desertgrenadier1",
+	faceLeft = true,
 	teamName = loc("The Hogies"),
 	targets = {
 		{ x = 628, y = 0 },
