@@ -9,9 +9,10 @@ local params = {
 	map = "SB_Crystal",
 	theme = "Cave",
 	hog_x = 2039,
-	hog_y = 684,
+	hog_y = 701,
 	hogName = loc("Grenadier"),
 	hogHat = "war_desertgrenadier2",
+	faceLeft = true,
 	teamName = loc("Grenade Group"),
 	teamFlag = "cm_grenade",
 	targets = {
