@@ -8,7 +8,7 @@ local params = {
 	map = "Hedgewars",
 	theme = "Nature",
 	hog_x = 1990,
-	hog_y = 514,
+	hog_y = 533,
 	hogHat = "NoHat",
 	teamGrave = "bp2",
 	teamFlag = "cm_flower",
