@@ -8,7 +8,7 @@ local params = {
 	map = "SB_Haunty",
 	theme = "Halloween",
 	hog_x = 320,
-	hog_y = 324,
+	hog_y = 347,
 	hogHat = "NoHat",
 	hogGrave = "Bones",
 	teamFlag = "cm_crosshair",
